--- a/style.css
+++ b/style.css
@@ -1,14 +1,24 @@
+body{
+  margin: 0;
+  padding: 0;
+  /* overflow: hidden; */
+}
+
+
+
 .popup_modal{
   height: 100vh;
   width: 100vw;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   background-color: rgba(0,0,0,0.9);
   display: flex;
   justify-content: center;
   align-items: center;
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  
 }
 
 .popup_modal_img{
